# fastapi-SQL

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
api/: Dockerfile  api.py  requirements.txt
api/crud/: crud.py  item_crud.py  user_crud.py
api/db/: database.py  init_db.py
api/models/: models.py
api/resources/: items_res.py  users_res.py
api/responces/: items_resp.py  users_resp.py
api/sqlalchemy_models/: models.py
api/validation_models/: schemas.py
src/: Dockerfile  requirements.txt
src/api/: api.py  conftest.py
src/api/crud/: item_crud.py  user_crud.py
src/api/db/: init_db.py
src/api/resources/: items_res.py  ping_res.py  ping_test.py  users_res.py
src/api/sqlalchemy_models/: models.py
src/api/validation_models/: schemas.py
src/tests/: conftest.py
src/tests/resources/: test_ping.py  test_users.py
